--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "adapt-harsh",
+    "name": "adapt-harsh#1.0.1",
     "repository": "https://github.com/harsh-chhabra-smartbuzz/adapt-harsh",
     "framework": "~2.0.2",
     "version": "1.0.1",
