--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
-    "name": "adapt-harsh-1-0-1",
+    "name": "adapt-harsh-newupdated",
     "repository": "https://github.com/harsh-chhabra-smartbuzz/adapt-harsh",
-    "framework": "~2.0.2",
     "version": "2.0.2",
     "homepage": "https://github.com/harsh-chhabra-smartbuzz/adapt-harsh",
     "description": "this is test component",
